# Messenger

./: .env.example  docker-compose.yml
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8bbaf100e2bf_initial_tables.py  f05e4d156501_initial_tables.py
backend/src/backend/: main.py
backend/src/backend/api/v1/: router.py
backend/src/backend/api/v1/auth/: endpoints.py
backend/src/backend/api/v1/conversations/: endpoints.py
backend/src/backend/api/v1/files/: endpoints.py
backend/src/backend/api/v1/messages/: endpoints.py
backend/src/backend/api/v1/users/: endpoints.py
backend/src/backend/core/: auth_settings.py  connection_manager.py  db_settings.py  files_settings.py  settings.py
backend/src/backend/database/: database.py
backend/src/backend/exceptions/: auth_exceptions.py  file_exceptions.py  message_exceptions.py
backend/src/backend/models/: __init__.py  file.py  message.py  message_attachments.py  user.py
backend/src/backend/schemas/: conversation_schema.py  file_schema.py  message_schema.py  user_schema.py
backend/src/backend/services/: auth_service.py  conversation_service.py  files_service.py  message_service.py  users_service.py
backend/uploads/: 95153887-70c3-45a3-a6d2-f66fde6d24b7.txt
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts  auth.ts  conversations.ts  files.ts  users.ts
frontend/src/components/: Header.tsx
frontend/src/components/ChatComponents/: ChatHeader.tsx
frontend/src/hooks/: useChatSocket.ts
frontend/src/pages/: AuthorisationPage.tsx  ChatsPage.tsx  HomePage.tsx  UsersPage.tsx
frontend/src/store/: store.ts
frontend/src/types/: auth.ts  conversation.ts  file.ts  message.ts  user.ts
frontend/src/utils/: error.ts
(+21 files in other folders)
